Revision history for ack

1.17_01 Mon Jun  5 12:04:38 CDT 2006
        [FIXES]
        * Starting points for files can be files, not just directories.
          This broke in 1.16.

        [ENHANCEMENTS]
        * ack can now read from STDIN as a filter, like any good program.

1.16    Fri Jun  2 23:50:10 CDT 2006
        [FIXES]
        * The -n flag was not working.  Using -n would find no files
          at all.  And added some more unit tests to make sure I don't
          screw it up again.

1.14    Tue May 30 23:12:43 CDT 2006
        [ENHANCEMENTS]
        * Added -f flag to only show the files that would be searched,
          instead of actually searching them.  This means that you can
          get an easy way to get a list of all the Perl files in the
          current directory, for example, by doing

            ack -f --perl

          Or in multiple directories

            ack -f --perl thisdir thatdir

        [FIXES]
        * Added back -a as a synonym for --all.

1.12    Wed May 10 11:13:42 CDT 2006
        [FIXES]
        * Was not skipping directories it should have been.  Now it does.

1.10    Thu May  4 16:11:38 CDT 2006
        [ENHANCEMENTS]
        * Added --parrot support.  Thanks, Jerry Gay.

        * No longer defaults to ANSI highlighting on Windows.  Thanks
          again, Jerry.

        * Added support for ACK_SWITCHES environment variable.

1.08    May 01 2006
        [ENHANCEMENTS]
        * Now supports argument bundling.  "ack -i -l" can now be done as
          "ack -il".  Thanks, Pete Krawczyk.

        * Added --javascript support, plus a --js version to save your
          weary fingers.  Thanks, Ask.

1.06    Tue Mar 28 08:37:02 CST 2006
        [FIXES]
        * Now handles filenames that start with ">" or "<".
        * Failing to open a file is now a warning, instead of fatal.

1.04    Wed Jan 25 22:51:11 CST 2006
        [ENHANCEMENTS]
        * Now skips blib and RCS as well as CVS and .svn directories.